--- a/index.html
+++ b/index.html
@@ -2,12 +2,103 @@
 <html>
   <head>
     <title>Mi portafolio personal</title>
+    <link rel="stylesheet" href="./stayle.css" />
   </head>
   <body>
     <header>
-      <h1>Luz</h1>
-      <h2>Estudiante</h2>
+      <nav>
+        <ul>
+          <a href="#acerca-de-mi">Acerca de mí</a>
+          <a href="#habilidades">Habilidades</a>
+          <a href="#experiencia">Experiencia</a>
+          <a href="#proyectos">Proyectos</a>
+          <a href="#contacto">Contacto</a>
+        </ul>
+      </nav>
+      <h1 style="color:rgb(204, 11, 149)">Luz Ascona</h1>
+      <h2 style="color:rgb(244, 0, 118)">Estudiante</h2>
     </header>
+    <main>
+      <section id="acerca de mi ">
+        <h2>Acerca de mí</h2>
+    <p>
+     Estudiante de lic en matematicas y una persona que le gusta aprender cada dia cosas nuevas, asi tambien me gusta mucho enseñar 
+     y compartir lo que se.
+    </p>
+      </section>
+      <section id="habilidades">
+        <h2>Habilidades</h2>
+    <ul>
+      <li>Cantar</li>
+      <li>Accesorar</li>
+      <li>Trabajar en conjunto</li>
+      <li>Liderar</li>
+      <li>Maquillar</li>
+    </ul>
+      </section>
+      <section id="experiencia">
+        <h2>Experiencia</h2>
+        <ul>
+          <li>
+            <b>Empresa X</b> (2022-presente)
+            <ul>
+              <li>Desarrollador web junior</li>
+              <li>
+                Responsable del desarrollo y mantenimiento de la página web de la
+                empresa
+              </li>
+            </ul>
+          </li>
+          <li>
+            <strong>Empresa Y</strong> (2020-2022)
+            <ul>
+              <li>Diseñador web</li>
+              <li>
+                Responsable de dirigie y del diseño y maquetación de la página web de la empresa
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section id="proyectos">
+        <h2>Proyectos</h2>
+        <ul>
+          <li>
+            <a href="https://www.nytimes.com/games/wordle/index.html"
+              >Clon de Wordle</a
+            >
+            <p>Descripción del proyecto 1</p>
+          </li>
+          <li>
+            <a href="https://www.nytimes.com/games/wordle/index.html">Proyecto 2</a>
+            <p>Descripción del proyecto 2</p>
+          </li>
+        </ul>
+      </section>
+      <section id="contacto">
+        <h2>Contacto</h2>
+        <ul>
+          <li>Email: luzvane062@gamil.com</li>
+          <li>Teléfono: 0995797036</li>
+          <li>
+            Redes Sociales:
+            <ul>
+              <li>
+                <a href="https://www.facebook.com/luzvanessa.asconaibarrola">Facebook</a>
+              </li>
+              <li>
+                <a href="https://x.com/ascona_luzZzz">Twitter</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/ascona_luz/?next=%2F">instagram</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>Copyright &copy; 2024</p>
+    </footer>
   </body>
 </html>
-        
