--- a/index.html
+++ b/index.html
@@ -1,104 +1,102 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Mi portafolio personal</title>
-    <link rel="stylesheet" href="./stayle.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <a href="#acerca-de-mi">Acerca de mí</a>
-          <a href="#habilidades">Habilidades</a>
-          <a href="#experiencia">Experiencia</a>
-          <a href="#proyectos">Proyectos</a>
-          <a href="#contacto">Contacto</a>
-        </ul>
-      </nav>
-      <h1 style="color:rgb(204, 11, 149)">Luz Ascona</h1>
-      <h2 style="color:rgb(244, 0, 118)">Estudiante</h2>
-    </header>
-    <main>
-      <section id="acerca de mi ">
-        <h2>Acerca de mí</h2>
-    <p>
-     Estudiante de lic en matematicas y una persona que le gusta aprender cada dia cosas nuevas, asi tambien me gusta mucho enseñar 
-     y compartir lo que se.
-    </p>
-      </section>
-      <section id="habilidades">
-        <h2>Habilidades</h2>
-    <ul>
-      <li>Cantar</li>
-      <li>Accesorar</li>
-      <li>Trabajar en conjunto</li>
-      <li>Liderar</li>
-      <li>Maquillar</li>
-    </ul>
-      </section>
-      <section id="experiencia">
-        <h2>Experiencia</h2>
-        <ul>
-          <li>
-            <b>Empresa X</b> (2022-presente)
-            <ul>
-              <li>Desarrollador web junior</li>
+
+<head>
+  <title>Mi portafolio personal</title>
+  <link rel="stylesheet" href="./stayle.css" />
+  <link rel="stayleheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul>
+        <a class="menu-item" href="#acerca-de-mi">Acerca de mí</a>
+        <a class="menu-item" href="#habilidades">Habilidades</a>
+        <a class="menu-item" class="menu-item" href="#experiencia">Experiencia</a>
+        <a class="menu-item" href="#proyectos">Proyectos</a>
+        <a class="menu-item" href="#contacto">Contacto</a>
+      </ul>
+    </nav>
+    <h1 style="color:rgb(204, 11, 149)">Luz Ascona</h1>
+    <h2 style="color:rgb(244, 0, 118)">Estudiante</h2>
+  </header>
+  <main>
+    <section id="acerca de mi ">
+      <h2>Acerca de mí</h2>
+      <p>
+        Estudiante de lic en matematicas y una persona que le gusta aprender cada dia cosas nuevas, asi tambien me gusta
+        mucho enseñar
+        y compartir lo que se.
+      </p>
+    </section>
+    <section id="habilidades">
+      <h2>Habilidades</h2>
+      <ol>
+        <li>Cantar</li>
+        <li>Accesorar</li>
+        <li>Trabajar en conjunto</li>
+        <li>Liderar</li>
+        <li>Maquillar</li>
+      </ol>
+    </section>
+    <section id="experiencia">
+      <h2>Experiencia</h2>
+      <ul>
+        <li><b>Empresa X</b> (2022 - presente)
+          <ul>
+            <li>Logro 1</li>
+            <li>Logro 2</li>
+          </ul>
+        </li>
+        <li></b>Empresa Y</b> (2019 - 2022)
+          <ul>
+            <li>Logro 1</li>
+            <li>Logro 2 </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section id="proyectos">
+      <h2>Proyectos</h2>
+      <ul>
+        <li>
+          <a href="https://www.nytimes.com/games/wordle/index.html">Clon de Wordle</a>
+          <p>Descripción del proyecto 1</p>
+        </li>
+        <li>
+          <a href="https://www.nytimes.com/games/wordle/index.html">Proyecto 2</a>
+          <p>Descripción del proyecto 2</p>
+        </li>
+      </ul>
+    </section>
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <ul>
+        <li>Email: luzvane062@gamil.com</li>
+        <li>Teléfono: 0985797036</li>
+        <li>
+          Redes Sociales:
+          <a href="https://www.facebook.com/luzvanessa.asconaibarrola/" ><img src= "https://cdn1.iconfinder.com/data/icons/social-media-set-for-free/32/facebook-512.png" width="20"/></a>     
+          <a href="https://x.com/ascona_luzZzz"><img src= "https://upload.wikimedia.org/wikipedia/commons/5/5a/X_icon_2.svg" width="20"/></a>
+          <a href="https://web.whatsapp.com/" ><img src = "https://s1.elespanol.com/2022/09/09/elandroidelibre/701940583_227023717_1024x576.jpg" width="40"/></a>
+          <a href="https://www.instagram.com/ascona_luz/?next=%2F"><img src= "https://img.freepik.com/vector-gratis/icono-redes-sociales-vector-instagram-7-junio-2021-bangkok-tailandia_53876-136728.jpg?w=740&t=st=1718863575~exp=1718864175~hmac=169279d1ecae54adee0ca7278dad159fabe323600b7da02f27a3456f4fa1eff8" width="20"/></a>
+            <ul id="sociales">
               <li>
-                Responsable del desarrollo y mantenimiento de la página web de la
-                empresa
+                <a href="https://www.facebook.com/tucuenta" class="fa fa-facebook"></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/tucuenta" class="fa fa-twitter"></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/tucuenta" class="fa fa-linkedin"></a>
               </li>
             </ul>
-          </li>
-          <li>
-            <strong>Empresa Y</strong> (2020-2022)
-            <ul>
-              <li>Diseñador web</li>
-              <li>
-                Responsable de dirigie y del diseño y maquetación de la página web de la empresa
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-      <section id="proyectos">
-        <h2>Proyectos</h2>
-        <ul>
-          <li>
-            <a href="https://www.nytimes.com/games/wordle/index.html"
-              >Clon de Wordle</a
-            >
-            <p>Descripción del proyecto 1</p>
-          </li>
-          <li>
-            <a href="https://www.nytimes.com/games/wordle/index.html">Proyecto 2</a>
-            <p>Descripción del proyecto 2</p>
-          </li>
-        </ul>
-      </section>
-      <section id="contacto">
-        <h2>Contacto</h2>
-        <ul>
-          <li>Email: luzvane062@gamil.com</li>
-          <li>Teléfono: 0995797036</li>
-          <li>
-            Redes Sociales:
-            <ul>
-              <li>
-                <a href="https://www.facebook.com/luzvanessa.asconaibarrola">Facebook</a>
-              </li>
-              <li>
-                <a href="https://x.com/ascona_luzZzz">Twitter</a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com/ascona_luz/?next=%2F">instagram</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <p>Copyright &copy; 2024</p>
-    </footer>
-  </body>
-</html>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>Copyright &copy; 2024</p>
+  </footer>
+</body>
