--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <h2>Proyectos</h2>
       <ul>
         <li>
-          <a href="https://www.nytimes.com/games/wordle/index.html">Clon de Wordle</a>
+          <a href="https://www.nytimes.com/games/wordle/index.html"
+          >Clon de Wordle</a>
           <p>Descripción del proyecto 1</p>
         </li>
         <li>
@@ -83,10 +84,10 @@
           <a href="https://www.instagram.com/ascona_luz/?next=%2F"><img src= "https://img.freepik.com/vector-gratis/icono-redes-sociales-vector-instagram-7-junio-2021-bangkok-tailandia_53876-136728.jpg?w=740&t=st=1718863575~exp=1718864175~hmac=169279d1ecae54adee0ca7278dad159fabe323600b7da02f27a3456f4fa1eff8" width="20"/></a>
             <ul id="sociales">
               <li>
-                <a href="https://www.facebook.com/tucuenta" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/luzvanessa.asconaibarrola/" class="fa fa-facebook"></a>
               </li>
               <li>
-                <a href="https://twitter.com/tucuenta" class="fa fa-twitter"></a>
+                <a href="https://x.com/ascona_luzZzz" class="fa fa-twitter"></a>
               </li>
               <li>
                 <a href="https://www.linkedin.com/in/tucuenta" class="fa fa-linkedin"></a>
