--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2 style="color:rgb(244, 0, 118)">Estudiante</h2>
   </header>
   <main>
-    <section id="acerca de mi ">
+    <section id="acerca-de-mi">
       <h2>Acerca de mí</h2>
       <p>
         Estudiante de lic en matematicas y una persona que le gusta aprender cada dia cosas nuevas, asi tambien me gusta
